--- a/project/toy/Makefile
+++ b/project/toy/Makefile
@@ -21,7 +21,7 @@ clean:
 	rm -f *.o *.elf
 led.o: led.c led.h
 
-wdInterruptHandler.o: stateMachines.h buzzer.h led.h switches.h
+wdInterruptHandler.o: stateMachines.h buzzer.h led.h switches.h 
 
 stateMachines.o: led.h buzzer.h stateMachines.h 
 
@@ -29,5 +29,5 @@ buzzer.o: buzzer.h
 
 switches.o: switches.h led.h
 
-blinkMain.o: led.h buzzer.h
+main.o: led.h buzzer.h switches.h 
 
